* Fix layout of filters at Statistics view on mobile

--- a/src/view/Views/Statistics/style.scss
+++ b/src/view/Views/Statistics/style.scss
@@ -8,7 +8,7 @@
 }
 
 .report-type-filter {
-  max-width: 350px;
+  max-width: 300px;
 
   .link-menu {
     flex-flow: row nowrap;
